--- a/styles/page.scss
+++ b/styles/page.scss
@@ -40,6 +40,11 @@ main {
         border-bottom: 1px solid #aaa;
         text-align: center;
         background-color: #f7f7f7;
+        h3 {
+            font-size: 1.25rem; 
+            font-weight: 500; 
+            margin-bottom: 10px;
+        }
         h2 {
             font-size: 1.25rem; 
             font-weight: 500; 
