--- a/styles/main.scss
+++ b/styles/main.scss
@@ -110,7 +110,7 @@ body {
             height: 100vh;
             transition: all 0.3s;
             .menu_info {
-                background-color: $blue;
+                background-color: $gray;
                 position: fixed;
                 z-index: 999;
                 height: 100vh;
