--- a/styles/main.scss
+++ b/styles/main.scss
@@ -273,8 +273,8 @@ body {
                         text-align: center;
                         position: absolute;
                         top:100px;
-                        left: 210px;
-                        animation: left_right 1.7s ease ;
+                        left: 110px;
+                        animation: left_right 1.8s ease ;
                         background-color: $dkgray;
                         padding: 0 14px;
                         color:#fff;
@@ -286,8 +286,8 @@ body {
                         text-align: center;
                         position: absolute;
                         top:160px;
-                        left: 120px;
-                        animation: left_right 2s linear;
+                        left: 110px;
+                        animation: left_right 1.8s ease-in-out;
                         background-color: $dkgray;
                         padding: 0 14px;
                         color:#fff;
@@ -299,26 +299,65 @@ body {
                         text-align: center;
                         position: absolute;
                         top:220px;
-                        left: 250px;
-                        animation: left_right 1.5s ease-in-out;
+                        left: 110px;
+                        animation: left_right 2.3s ease-in-out;
                         background-color: $dkgray;
                         padding: 0 14px;
                         color:#fff;
                         box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.12);
                     }
-                    p:nth-child(8) {
-                        font-size: 2.4rem;
-                        letter-spacing: 0.02rem;
-                        text-align: center;
-                        position: absolute;
-                        top:280px;
-                        left: 130px;
-                        animation: left_right 2s ease;
-                        background-color: $dkgray;
-                        padding: 0 14px;
-                        color:#fff;
-                        box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.12);
-                    }
+                    // p:nth-child(5) {
+                    //     font-size: 2.4rem;
+                    //     letter-spacing: 0.02rem;
+                    //     text-align: center;
+                    //     position: absolute;
+                    //     top:100px;
+                    //     left: 210px;
+                    //     animation: left_right 1.7s ease ;
+                    //     background-color: $dkgray;
+                    //     padding: 0 14px;
+                    //     color:#fff;
+                    //     box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.12);
+                    // }
+                    // p:nth-child(6) {
+                    //     font-size: 2.4rem;
+                    //     letter-spacing: 0.02rem;
+                    //     text-align: center;
+                    //     position: absolute;
+                    //     top:160px;
+                    //     left: 120px;
+                    //     animation: left_right 2s linear;
+                    //     background-color: $dkgray;
+                    //     padding: 0 14px;
+                    //     color:#fff;
+                    //     box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.12);
+                    // }
+                    // p:nth-child(7) {
+                    //     font-size: 2.4rem;
+                    //     letter-spacing: 0.02rem;
+                    //     text-align: center;
+                    //     position: absolute;
+                    //     top:220px;
+                    //     left: 250px;
+                    //     animation: left_right 1.5s ease-in-out;
+                    //     background-color: $dkgray;
+                    //     padding: 0 14px;
+                    //     color:#fff;
+                    //     box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.12);
+                    // }
+                    // p:nth-child(8) {
+                    //     font-size: 2.4rem;
+                    //     letter-spacing: 0.02rem;
+                    //     text-align: center;
+                    //     position: absolute;
+                    //     top:280px;
+                    //     left: 130px;
+                    //     animation: left_right 2s ease;
+                    //     background-color: $dkgray;
+                    //     padding: 0 14px;
+                    //     color:#fff;
+                    //     box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.12);
+                    // }
                     h3 {
                         position: absolute;
                         top:250px;
