--- a/styles/main.css
+++ b/styles/main.css
@@ -1107,10 +1107,16 @@ body main .wrap .skill_pop .skill_box_bg > div[class^=skill_] .text_contents spa
 /* 글자 스와이프처럼 움직이는 애니메이션 */
 @keyframes text_sw {
   0% {
-    transform: translateX(100%);
+    transform: translateY(-20%);
+    opacity: 0;
+  }
+  50% {
+    transform: translateY(0%);
+    opacity: 1;
   }
   100% {
-    transform: translateX(200%);
+    transform: translateY(-20%);
+    opacity: 0;
   }
 }
 /* 글자 블루 블랙 애니메이션 */
